fix(profile-info): fix of weight & alignment
removed px mark and placed justify content to the small screens

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,7 +4,7 @@
   margin: 22px 0 21px 30px;
   flex-wrap: wrap;
   min-width: 415px;
-  justify-content: center;
+  justify-content: left;
 }
 
 @media screen and (max-width: 890px) {
@@ -13,5 +13,6 @@
     margin-top: 26px;
     min-width: unset;
     max-width: 290px;
+    justify-content: center;
   }
 }
