--- a/blocks/profile/__role/profile__role.css
+++ b/blocks/profile/__role/profile__role.css
@@ -3,7 +3,7 @@
   padding: 0;
   font-size: 18px;
   line-height: calc(22 / 18);
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 890px) {
